# GeometryTracer

./: .gitignore  README.md
consumer/: math.js  navigate.js  producer.html  render.js  shader.js  style_sheet.css  tools.js  tracer.js
producer/: CMakeLists.txt
producer/cmake/: Macros.cmake
producer/src/: producer.h  vector3.h  vector3.ih
producer/src/base/: common.h  const.h  exception.h  macro.h  printers.h  security.cpp  security.h  singleton.h  stringhelper.cpp  stringhelper.h
producer/src/butter/: const.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  staticvalues.cpp  stream.cpp  stream.h  types.h  vector2.h  vector2.ih  vector3.h  vector3.ih  vector4.h  vector4.ih
producer/src/core/: producer.cpp  producer.h  types.h
producer/test/: CMakeLists.txt  testSceneExample.cpp
